fix: prevent overflows on very wide icons

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -125,6 +125,7 @@
 
 .acf-svg-icon-picker__popup ul li img {
   max-height: 50px;
+  max-width: 100%;
 }
 
 .acf-svg-icon-picker__popup ul li span {
